Fix special notice spacing

--- a/resources/assets/sass/web.scss
+++ b/resources/assets/sass/web.scss
@@ -205,56 +205,18 @@ h1, h2, h3 {
 * Special Notice
 */
 
-.special-notice{
+.special-notice {
   color: $gray-dark;
   background-color: $brand-warning;
-  margin-top: 7em;
+  margin-top: 2em;
   margin-bottom: 2em;
 }
 
 .special-notice h2 {
-  margin-right: 1em;
-}
-
-span.special-text {
-  display: block;
-  font-size: 2em;
-  margin-top: -96px;
-  margin-right: 1em;
-  color: $brand-warning;
-}
-
-span.notice-text {
-  font-size: 1.8em;
+  font-size: 3rem;
   line-height: 40px;
-}
-
-.special-notice-text {
-  margin-top: -1em;
-}
-
-@media(min-width: 500px) {
-  span.special-text{
-    font-size: 2.5em;
-    margin-top: -115px;
-  }
-
-}
-
-@media (min-width: 768px) {
-  span.special-text {
-    font-size: 3em;
-    margin-top: -130px;
-  }
-  span.notice-text {
-    font-size: 2.2em;
-  }
-}
-
-@media (min-width: 992px) {
-  .special-notice-text {
-    margin-top: -3.5em;
-  }
+  margin-bottom: 1em;
+  margin-top: 1em;
 }
 
 /****************
